--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "autoprefixer": "^10.4.20",
     "express": "^4.18.2",
     "html2pdf.js": "^0.10.2",
+    "jwt-decode": "^4.0.0",
+    "ngx-socket-io": "^4.7.0",
     "ngx-webstorage": "^18.0.0",
     "postcss": "^8.4.45",
     "rxjs": "~7.8.0",
@@ -38,6 +40,7 @@
     "@angular/compiler-cli": "^18.2.0",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
+    "@types/jwt-decode": "^2.2.1",
     "@types/node": "^18.18.0",
     "jasmine-core": "~5.2.0",
     "karma": "~6.4.0",
