--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.18.2",
     "html2pdf.js": "^0.10.2",
     "jwt-decode": "^4.0.0",
+    "ngx-pagination": "^6.0.3",
     "ngx-socket-io": "^4.7.0",
     "ngx-webstorage": "^18.0.0",
     "postcss": "^8.4.45",
