--- a/angular.json
+++ b/angular.json
@@ -63,6 +63,12 @@
                 }
               ],
               "outputHashing": "all",
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.prod.ts"
+                }
+              ]
             },
             "development": {
               "optimization": false,
